# containr

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PRD.md  README.md  TODO.md  agent.txt  agents.txt  changelog.txt  containr.example.toml  install.sh  install.txt  mise.toml  package-lock.json  package.json  prd.txt  readme.txt  todo.txt  znskr.example.json  znskr.example.toml  znskr.toml
.opencode/plan/: multi-container-implementation.md
crates/containr/: Cargo.toml
crates/containr-api/: Cargo.toml  build.rs
crates/containr-api/src/: auth.rs  auth_test.rs  cache.rs  deployment_source.rs  github.rs  lib.rs  openapi.rs  security.rs  server.rs  state.rs  static_files.rs
crates/containr-api/src/domain/: mod.rs
crates/containr-api/src/domain/services/: mod.rs
crates/containr-api/src/handlers/: apps.rs  auth.rs  certificates.rs  containers.rs  databases.rs  deployments.rs  deployments_test.rs  github_app.rs  github_repos.rs  mod.rs  projects.rs  queues.rs  services.rs  services_test.rs  settings.rs  storage.rs  system.rs  webhooks.rs  websocket.rs
crates/containr-api/src/routes/: mod.rs  services.rs
crates/containr-common/: Cargo.toml
crates/containr-common/migrations/: 001_core.sql  002_platform_services.sql
crates/containr-common/sqlx_migrations/: 001_metadata_store.sql  002_http_request_logs.sql
crates/containr-common/src/: config.rs  db.rs  encryption.rs  error.rs  lib.rs  managed_services.rs  models.rs  service_inventory.rs  service_inventory_test.rs  sqlite_relational.rs
crates/containr-proxy/: Cargo.toml  build.rs
crates/containr-proxy/src/: acme.rs  lib.rs  pingora_proxy.rs  routes.rs  static_files.rs
crates/containr-runtime/: Cargo.toml
crates/containr-runtime/src/: app_service_manager.rs  cron_scheduler.rs  database_manager.rs  docker.rs  image.rs  lib.rs  queue_manager.rs  route_updates.rs  storage_manager.rs  worker.rs
crates/containr-runtime/src/database_manager/: pitr.rs
crates/containr-runtime/tests/: integration.rs
crates/containr/src/: client.rs  client_config.rs  lib.rs  logging.rs  main.rs  openapi.rs  systemd.rs  systemd_test.rs
crates/containrctl/: Cargo.toml
crates/containrctl/src/: api_client.rs  client_config_test.rs  lib.rs  main.rs
crates/znskr/: Cargo.toml
crates/znskr-api/: Cargo.toml  build.rs
crates/znskr-api/src/: auth.rs  github.rs  lib.rs  openapi.rs  security.rs  server.rs  state.rs
crates/znskr-api/src/handlers/: apps.rs  auth.rs  certificates.rs  containers.rs  databases.rs  deployments.rs  git.rs  github_app.rs  github_repos.rs  health.rs  mod.rs  queues.rs  settings.rs  storage.rs  system.rs  webhooks.rs  websocket.rs
crates/znskr-common/: Cargo.toml
crates/znskr-common/src/: config.rs  db.rs  encryption.rs  error.rs  lib.rs  managed_services.rs  models.rs
crates/znskr-proxy/: Cargo.toml  build.rs
crates/znskr-proxy/src/: acme.rs  lib.rs  pingora_proxy.rs  proxy.rs  routes.rs  static_files.rs
crates/znskr-runtime/: Cargo.toml
crates/znskr-runtime/src/: client.rs  container.rs  database_manager.rs  docker.rs  error.rs  image.rs  lib.rs  queue_manager.rs  storage_manager.rs  worker.rs
crates/znskr-runtime/tests/: integration.rs
crates/znskr/src/: main.rs  openapi.rs
docs/: api-reference.txt  architecture.txt  configuration.txt  deployment-guide.txt  everything-is-a-service.md  quickstart.txt  troubleshooting.txt
scripts/: deploy-prod.sh  e2e-services.sh  e2e-ui-smoke.sh  release-prod.sh
web/: biome.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
web/scripts/: ui-smoke.mjs
web/src/: App.tsx  index.css  index.tsx
web/src/api/: auth.ts  client.ts  containers.ts  github.ts  index.ts  openapi.json  schema.d.ts  services.ts  settings.ts  storage.ts
web/src/components/: ContainerMonitor.tsx  ContainerTerminal.tsx  EnvVarEditor.tsx  Layout.tsx  Loading.tsx  Plain.tsx  ServiceForm.tsx  Shell.tsx  SystemMonitor.tsx
web/src/components/service-detail/: ServiceCertificatePanel.tsx  ServiceDeploymentPanel.tsx  ServiceHttpLogsPanel.tsx  ServiceLogsPanel.tsx  ServiceSettingsPanel.tsx  formatters.ts  types.ts
web/src/components/ui/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  DropdownMenu.tsx  EmptyState.tsx  Input.tsx  Label.tsx  PageHeader.tsx  Separator.tsx  Sidebar.tsx  Skeleton.tsx  Switch.tsx  Tabs.tsx  Textarea.tsx  index.ts
web/src/context/: AuthContext.tsx  ThemeContext.tsx
web/src/lib/: cn.ts
web/src/pages/: AppDetail.tsx  BucketDetail.tsx  Containers.tsx  CreateConfigure.tsx  CreateFlow.tsx  CreateRepo.tsx  CreateTemplate.tsx  Dashboard.tsx  DatabaseDetail.tsx  Databases.tsx  GithubCallback.tsx  GithubInstallCallback.tsx  Login.tsx  NewApp.tsx  QueueDetail.tsx  Queues.tsx  Register.tsx  Settings.tsx  Storage.tsx  Volumes.tsx  container-detail.tsx  containers.tsx  service-detail.tsx  services.tsx
web/src/utils/: ansi.ts  format.ts  keyValueEntries.ts  projectEditor.ts  service-groups.ts
