[workspace]
resolver = "2"
members = [
    "crates/znskr",
    "crates/znskr-common",
    "crates/znskr-api",
    "crates/znskr-runtime",
    "crates/znskr-proxy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["znskr"]

[workspace.dependencies]
# async runtime
tokio = { version = "1.43", features = ["full"] }

# web framework
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# database
sled = "0.34"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# error handling
thiserror = "2"
anyhow = "1"

# crypto
argon2 = "0.5"
jsonwebtoken = "9"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# http client
reqwest = { version = "0.12", features = ["json"] }

# uuid
uuid = { version = "1", features = ["v4", "serde"] }

# time
chrono = { version = "0.4", features = ["serde"] }

# reverse proxy
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"

# acme / ssl
instant-acme = "0.7"
rcgen = "0.13"
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

# grpc (for containerd if needed)
tonic = "0.12"
prost = "0.13"

# misc
async-trait = "0.1"
futures = "0.3"
dashmap = "6"
parking_lot = "0.12"
once_cell = "1"
rand = "0.8"
base64 = "0.22"
url = "2"

# pin sfv for pingora compatibility
sfv = "=0.9.4"

