[package]
name = "containrctl"
version.workspace = true
edition.workspace = true
default-run = "containrctl"

[[bin]]
name = "containrctl"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"

