[package]
name = "znskr-api"
version.workspace = true
edition.workspace = true

[dependencies]
znskr-common = { path = "../znskr-common" }
znskr-runtime = { path = "../znskr-runtime" }

tokio = { workspace = true }
axum = { workspace = true, features = ["ws", "multipart"] }
tower = { workspace = true }
tower-http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
sled = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
trust-dns-resolver = { workspace = true }

# embedded static files
rust-embed = "8.9"
mime_guess = "2"

# rand_core 0.6 for password-hash compatibility
rand_core = { version = "0.6", features = ["getrandom"] }

# config serialization
toml = { workspace = true }

# openapi documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
