[package]
name = "znskr-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sled = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand.workspace = true
aes-gcm = "0.10.3"
base64.workspace = true
sha2.workspace = true

