[package]
name = "znskr-proxy"
version.workspace = true
edition.workspace = true

[dependencies]
znskr-common = { path = "../znskr-common" }

tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

instant-acme = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }

# Pingora - Cloudflare's reverse proxy framework
pingora = "0.6"
pingora-proxy = "0.6"
pingora-http = "0.6"
pingora-core = "0.6"

# embedded static files
rust-embed = "8.9"
mime_guess = "2"

