[package]
name = "znskr-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
znskr-common = { path = "../znskr-common" }

tokio = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
aws-sdk-s3 = { version = "1.119.0", features = ["behavior-version-latest"] }
aws-config = "1.8.12"

# docker api
bollard = { workspace = true }

# git operations
git2 = { workspace = true }

# tar archives for docker builds
tar = "0.4"

# bytes for building image body
bytes = { workspace = true }

[dev-dependencies]
tempfile = "3"
uuid = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
