[package]
name = "znskr"
version.workspace = true
edition.workspace = true
default-run = "znskr"

[[bin]]
name = "znskr"
path = "src/main.rs"

[dependencies]
znskr-common = { path = "../znskr-common" }
znskr-api = { path = "../znskr-api" }
znskr-runtime = { path = "../znskr-runtime" }
znskr-proxy = { path = "../znskr-proxy" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

clap = { version = "4", features = ["derive"] }
