[package]
name = "znskr"
version.workspace = true
edition.workspace = true
default-run = "znskr"

[[bin]]
name = "znskr"
path = "src/main.rs"

[[bin]]
name = "openapi"
path = "src/openapi.rs"
required-features = ["openapi-only"]

[features]
default = []
openapi-only = ["znskr-api/skip-web-build", "znskr-proxy/skip-web-build"]

[dependencies]
znskr-common = { path = "../znskr-common" }
znskr-api = { path = "../znskr-api" }
znskr-runtime = { path = "../znskr-runtime" }
znskr-proxy = { path = "../znskr-proxy" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

clap = { version = "4", features = ["derive"] }

# docker api
bollard = { workspace = true }

# openapi
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
